@@ -53,9 +53,9 @@ public class FreeplugHandler extends ApiConsumerHandler {
             properties.put(Thing.PROPERTY_MODEL_ID, plug.model());
             properties.put(ROLE, plug.netRole().name());
             properties.put(NET_ID, plug.netId());
-            properties.put(ETHERNET_SPEED, String.format("%d Mb/s", plug.ethSpeed()));
-            properties.put(LOCAL, Boolean.valueOf(plug.local()).toString());
-            properties.put(FULL_DUPLEX, Boolean.valueOf(plug.ethFullDuplex()).toString());
+            properties.put(ETHERNET_SPEED, "%d Mb/s".formatted(plug.ethSpeed()));
+            properties.put(LOCAL, Boolean.toString(plug.local()));
+            properties.put(FULL_DUPLEX, Boolean.toString(plug.ethFullDuplex()));
 
             if (plug.local()) { // Plug connected to the freebox does not provide rate up or down
                 List<Channel> channels = new ArrayList<>(getThing().getChannels());
@@ -88,7 +88,7 @@ public class FreeplugHandler extends ApiConsumerHandler {
             getManager(FreeplugManager.class).reboot(getMac());
             logger.debug("Freeplug {} succesfully restarted", getMac());
         } catch (FreeboxException e) {
-            logger.warn("Error restarting freeplug: {}", e.getMessage());
+            logger.warn("Error restarting freeplug {}: {}", getMac(), e.getMessage());
         }
     }
 
