@@ -16,6 +16,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
@@ -52,7 +53,7 @@ import org.slf4j.LoggerFactory;
  * sent to one of the channels.
  *
  * @author Markus Katter - Initial contribution
- * @contributer Jan Vybíral - Improved callback handling
+ * @author Jan Vybíral - Improved callback handling
  */
 @NonNullByDefault
 public class NukiBridgeHandler extends BaseBridgeHandler {
@@ -143,7 +144,7 @@ public class NukiBridgeHandler extends BaseBridgeHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(NukiDeviceDiscoveryService.class);
+        return Set.of(NukiDeviceDiscoveryService.class);
     }
 
     private synchronized void initializeHandler() {
@@ -175,7 +176,6 @@ public class NukiBridgeHandler extends BaseBridgeHandler {
     public void checkBridgeOnline() {
         logger.debug("checkBridgeOnline():bridgeIp[{}] status[{}]", this.config.ip, getThing().getStatus());
         if (getThing().getStatus().equals(ThingStatus.ONLINE)) {
-
             withHttpClient(client -> {
                 logger.debug("Requesting BridgeInfo to ensure Bridge[{}] is online.", this.config.ip);
                 BridgeInfoResponse bridgeInfoResponse = client.getBridgeInfo();
